Learnt about property binding and event handlers in angular

--- a/hello/src/app/app.component.html
+++ b/hello/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<app-property-binding />
 <button-custom />
 <h1 class="text-3xl font-bold mt-4">Hello {{name}}🚀🚀🚀 !!!!</h1>
 @if (isServerRunning) {
@@ -5,4 +7,7 @@
 }  @else {
     <h2 class="bg-slate-600 p-4 rounded-lg bg-2 w-full  font-semibold text-xl ">The server is not running.</h2>
 }
+
+<event-example />
+
 <app-products /> 
