learn about router link in angular

--- a/angular-defer/src/app/app.component.html
+++ b/angular-defer/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-image />   
 
 <nav>
-    <a href="/">Home</a> |
-    <a href="/welcome">User</a> |
-    <a href="/signup">Sign Up?</a> | 
-    <a href="/signup/reset">Reset password?</a>
+    <a routerLink="/">Home</a> |
+    <a routerLink="/welcome">User</a> |
+    <a routerLink="/signup">Sign Up?</a> | 
+    <a routerLink="/signup/reset">Reset password?</a>
 </nav>
 <router-outlet />
