learnt hoe to inject services into other components

--- a/forms/src/app/app.component.html
+++ b/forms/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-user />
 <app-signup />
+<br>
+<br>
+<br>
+<h2>Dependency injection</h2>
+<p>Name: {{ name }} | root from appservice - {{ root }}</p> 
+
+<br>
+<br>
+<h2>Theme Service:</h2>
+<p>The current theme is  : {{ theme }}</p>
