--- a/directives/src/app/app.component.html
+++ b/directives/src/app/app.component.html
@@ -1,2 +1,39 @@
 <h1 appHighlight>Hover over this text to see the highlight effect</h1>
 <app-lifecycle [message] = "'This message is from the parent component'"/>
+
+<h1>Hi There , I'm {{ name }} 👋👋</h1>
+
+
+
+<img [src]="imageUrl" alt="photo" width = "100" height = "100">
+
+
+
+<h2 appHighlight>Bharath B </h2>
+
+<button (click)="onClick($event)">Change Title</button>
+<app-twowaydatabinding />
+
+<app-directives />
+
+<br>
+<br>
+<hr>
+<hr>
+<h1>Services In Angular</h1>
+
+<div>
+    <ul>
+        <li *ngFor = "let item of items">
+            {{item}}
+        </li>
+    </ul>
+    <input type="text" #newItem>
+    <button (click)="addItem(newItem.value); newItem.value = ''">Add Item</button>
+</div>
+
+<br>
+<hr>
+<hr>
+
+<app-services />
