--- a/http/src/app/app.component.html
+++ b/http/src/app/app.component.html
@@ -1,9 +1,21 @@
 <br>
+<router-outlet></router-outlet>
+<nav>
+  <a routerLink = "/">Home</a> | 
+  <a routerLink="/about">About</a>
+</nav>
+
+
+
+
+<br>
 <br>
 <hr>
 <hr>
 <hr>
 <p>---------------------------------------------------------------</p>
+
+
 
 <h1>Http  Client Module for interacting with remote servers.</h1>
 
@@ -20,3 +32,5 @@
   <button (click) = "deletePost(1)">Delete Post</button>
   <p *ngIf = "error">{{error}}</p>
 </div>
+
+
